<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Set goals and the results you seek</string>
    <string name="nav_header_desc">IT96</string>
    <string name="app_name">Focus</string>
    <string name="projects">Projects</string>
    <string name="today">Today</string>
    <string name="calendar">Calendar</string>
    <string name="labels">Labels</string>
    <string name="priorities">Priorities</string>
    <string name="add_button">+</string>
    <string name="addProject">+</string>
    <string name="ProjectName">Project Name</string>
    <string name="Results">Results</string>
    <string name="Goals90">Objectives to 90 days</string>
    <string name="Goals2W">Objectives to 2 weeks</string>
    <string name="Actions">Actions</string>
    <string name="Notes">Notes</string>
    <string name="add">Add</string>
    <string name="SuccessfullyAdded">Successfully Added</string>
    <string name="FillRequiredFields">Please fill out all required fields</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="projectImage">Project Image</string>
    <string name="Goals">Goals</string>
    <string name="KeyResults">Key Results</string>
    <string name="Tasks">Tasks</string>
    <string name="NewGoal">e.g. Grow Sales by 30%</string>
    <string name="NewKeyResult">e.g. Get a Promotion</string>
    <string name="Save">Save</string>
    <string name="NewNote">e.g. Beware of distractions</string>
    <string name="NewTask">e.g. Send Quote</string>
    <string name="logout">Logout</string>
    <string name="NoDate">No Date</string>
</resources>