<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activeProject"
            type="net.it96.enfoque.database.Project" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        tools:context=".ProjectActivity">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardNewTask"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/ll_inner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/txt_projectName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{activeProject.name}"
                        tools:text="Project Name"/>

                    <EditText
                        android:id="@+id/etxt_newTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/NewTask"
                        android:ems="10"
                        android:hint="@string/NewTask"
                        android:inputType="textPersonName" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/addTaskDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NoDate"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Date" />

                        <ImageButton
                            android:id="@+id/ib_saveNewTask"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/Save"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_save" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>